Refactor: Removed Warnings & Co-operative fixes